更新语音识别，cpu温度采集

--- a/project/CubeMX_Config/CubeMX_Config.ioc
+++ b/project/CubeMX_Config/CubeMX_Config.ioc
@@ -1,31 +1,31 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag
-ADC1.NbrOfConversionFlag=1
-ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetSignedSaturation-0\#ChannelRegularConversion=DISABLE
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.master=1
+ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_TEMPSENSOR
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC3.NbrOfConversionFlag=1
+ADC3.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC3.OffsetSignedSaturation-0\#ChannelRegularConversion=DISABLE
+ADC3.Rank-0\#ChannelRegularConversion=1
+ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 DCMI.IPParameters=JPEGMode,PCKPolarity
 DCMI.JPEGMode=DCMI_JPEG_DISABLE
 DCMI.PCKPolarity=DCMI_PCKPOLARITY_RISING
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32H7
-Mcu.IP0=ADC1
+Mcu.IP0=ADC3
 Mcu.IP1=CORTEX_M7
 Mcu.IP10=SDMMC2
 Mcu.IP11=SPI1
-Mcu.IP12=SPI4
-Mcu.IP13=SYS
-Mcu.IP14=TIM5
-Mcu.IP15=UART4
-Mcu.IP16=USART3
-Mcu.IP17=USB_OTG_FS
+Mcu.IP12=SPI2
+Mcu.IP13=SPI4
+Mcu.IP14=SYS
+Mcu.IP15=TIM5
+Mcu.IP16=UART4
+Mcu.IP17=USART3
+Mcu.IP18=USB_OTG_FS
 Mcu.IP2=DCMI
 Mcu.IP3=ETH
 Mcu.IP4=FMC
@@ -34,134 +34,141 @@ Mcu.IP6=NVIC
 Mcu.IP7=QUADSPI
 Mcu.IP8=RCC
 Mcu.IP9=SDMMC1
-Mcu.IPNb=18
+Mcu.IPNb=19
 Mcu.Name=STM32H750XBHx
 Mcu.Package=TFBGA240
 Mcu.Pin0=PI6
 Mcu.Pin1=PI5
-Mcu.Pin10=PB6
-Mcu.Pin100=PH12
-Mcu.Pin101=PD11
-Mcu.Pin102=PD12
-Mcu.Pin103=PA5
-Mcu.Pin104=PC4
-Mcu.Pin105=PB1
-Mcu.Pin106=PJ2
-Mcu.Pin107=PF11
-Mcu.Pin108=PG0
-Mcu.Pin109=PE8
-Mcu.Pin11=PB4 (NJTRST)
-Mcu.Pin110=PE13
-Mcu.Pin111=PH8
-Mcu.Pin112=PB15
-Mcu.Pin113=PD10
-Mcu.Pin114=PD9
-Mcu.Pin115=PC5
-Mcu.Pin116=PJ3
-Mcu.Pin117=PJ4
-Mcu.Pin118=PG1
-Mcu.Pin119=PE7
-Mcu.Pin12=PK4
-Mcu.Pin120=PE14
-Mcu.Pin121=PB14
-Mcu.Pin122=PD8
-Mcu.Pin123=VP_SYS_VS_Systick
-Mcu.Pin13=PG11
-Mcu.Pin14=PJ15
-Mcu.Pin15=PD6
-Mcu.Pin16=PC11
-Mcu.Pin17=PH14
-Mcu.Pin18=PE2
-Mcu.Pin19=PE0
+Mcu.Pin10=PE1
+Mcu.Pin100=PA7
+Mcu.Pin101=PF12
+Mcu.Pin102=PF15
+Mcu.Pin103=PE12
+Mcu.Pin104=PE15
+Mcu.Pin105=PJ5
+Mcu.Pin106=PH12
+Mcu.Pin107=PD11
+Mcu.Pin108=PD12
+Mcu.Pin109=PA5
+Mcu.Pin11=PB6
+Mcu.Pin110=PC4
+Mcu.Pin111=PB1
+Mcu.Pin112=PJ2
+Mcu.Pin113=PF11
+Mcu.Pin114=PG0
+Mcu.Pin115=PE8
+Mcu.Pin116=PE13
+Mcu.Pin117=PH8
+Mcu.Pin118=PB15
+Mcu.Pin119=PD10
+Mcu.Pin12=PB4 (NJTRST)
+Mcu.Pin120=PD9
+Mcu.Pin121=PC5
+Mcu.Pin122=PJ3
+Mcu.Pin123=PJ4
+Mcu.Pin124=PG1
+Mcu.Pin125=PE7
+Mcu.Pin126=PE14
+Mcu.Pin127=PB14
+Mcu.Pin128=PD8
+Mcu.Pin129=VP_ADC3_TempSens_Input
+Mcu.Pin13=PK4
+Mcu.Pin130=VP_SYS_VS_Systick
+Mcu.Pin14=PG11
+Mcu.Pin15=PJ15
+Mcu.Pin16=PD6
+Mcu.Pin17=PC11
+Mcu.Pin18=PI2
+Mcu.Pin19=PH14
 Mcu.Pin2=PI4
-Mcu.Pin20=PB3 (JTDO/TRACESWO)
-Mcu.Pin21=PK6
-Mcu.Pin22=PK3
-Mcu.Pin23=PD7
-Mcu.Pin24=PC12
-Mcu.Pin25=PE5
-Mcu.Pin26=PG15
-Mcu.Pin27=PK7
-Mcu.Pin28=PG14
-Mcu.Pin29=PG13
+Mcu.Pin20=PC15-OSC32_OUT (OSC32_OUT)
+Mcu.Pin21=PC14-OSC32_IN (OSC32_IN)
+Mcu.Pin22=PE2
+Mcu.Pin23=PE0
+Mcu.Pin24=PB3 (JTDO/TRACESWO)
+Mcu.Pin25=PK6
+Mcu.Pin26=PK3
+Mcu.Pin27=PD7
+Mcu.Pin28=PC12
+Mcu.Pin29=PI3
 Mcu.Pin3=PB5
-Mcu.Pin30=PJ14
-Mcu.Pin31=PJ12
-Mcu.Pin32=PD2
-Mcu.Pin33=PD0
-Mcu.Pin34=PA10
-Mcu.Pin35=PA9
-Mcu.Pin36=PI9
-Mcu.Pin37=PE6
-Mcu.Pin38=PJ13
-Mcu.Pin39=PD1
+Mcu.Pin30=PE5
+Mcu.Pin31=PG15
+Mcu.Pin32=PK7
+Mcu.Pin33=PG14
+Mcu.Pin34=PG13
+Mcu.Pin35=PJ14
+Mcu.Pin36=PJ12
+Mcu.Pin37=PD2
+Mcu.Pin38=PD0
+Mcu.Pin39=PA10
 Mcu.Pin4=PK5
-Mcu.Pin40=PC8
-Mcu.Pin41=PC9
-Mcu.Pin42=PA12
-Mcu.Pin43=PA11
-Mcu.Pin44=PG8
-Mcu.Pin45=PF2
-Mcu.Pin46=PF1
-Mcu.Pin47=PF0
-Mcu.Pin48=PG5
-Mcu.Pin49=PI12
+Mcu.Pin40=PA9
+Mcu.Pin41=PI9
+Mcu.Pin42=PE6
+Mcu.Pin43=PJ13
+Mcu.Pin44=PD1
+Mcu.Pin45=PC8
+Mcu.Pin46=PC9
+Mcu.Pin47=PA12
+Mcu.Pin48=PA11
+Mcu.Pin49=PG8
 Mcu.Pin5=PG10
-Mcu.Pin50=PI13
-Mcu.Pin51=PI14
-Mcu.Pin52=PF3
-Mcu.Pin53=PG4
-Mcu.Pin54=PG2
-Mcu.Pin55=PK2
-Mcu.Pin56=PH1-OSC_OUT (PH1)
-Mcu.Pin57=PH0-OSC_IN (PH0)
-Mcu.Pin58=PF5
-Mcu.Pin59=PF4
+Mcu.Pin50=PF2
+Mcu.Pin51=PF1
+Mcu.Pin52=PF0
+Mcu.Pin53=PG5
+Mcu.Pin54=PI12
+Mcu.Pin55=PI13
+Mcu.Pin56=PI14
+Mcu.Pin57=PF3
+Mcu.Pin58=PG4
+Mcu.Pin59=PG2
 Mcu.Pin6=PG9
-Mcu.Pin60=PK0
-Mcu.Pin61=PK1
-Mcu.Pin62=PF6
-Mcu.Pin63=PF7
-Mcu.Pin64=PF8
-Mcu.Pin65=PJ11
-Mcu.Pin66=PF10
-Mcu.Pin67=PF9
-Mcu.Pin68=PJ10
-Mcu.Pin69=PC1
+Mcu.Pin60=PK2
+Mcu.Pin61=PH1-OSC_OUT (PH1)
+Mcu.Pin62=PH0-OSC_IN (PH0)
+Mcu.Pin63=PF5
+Mcu.Pin64=PF4
+Mcu.Pin65=PK0
+Mcu.Pin66=PK1
+Mcu.Pin67=PF6
+Mcu.Pin68=PF7
+Mcu.Pin69=PF8
 Mcu.Pin7=PC10
-Mcu.Pin70=PC2
-Mcu.Pin71=PC3
-Mcu.Pin72=PJ9
-Mcu.Pin73=PA2
-Mcu.Pin74=PA1
-Mcu.Pin75=PA0
-Mcu.Pin76=PJ0
-Mcu.Pin77=PE10
-Mcu.Pin78=PJ8
-Mcu.Pin79=PJ7
-Mcu.Pin8=PI7
-Mcu.Pin80=PJ6
-Mcu.Pin81=PH5
-Mcu.Pin82=PI15
-Mcu.Pin83=PJ1
-Mcu.Pin84=PF13
-Mcu.Pin85=PF14
-Mcu.Pin86=PE9
-Mcu.Pin87=PE11
-Mcu.Pin88=PB10
-Mcu.Pin89=PB11
-Mcu.Pin9=PE1
-Mcu.Pin90=PH10
-Mcu.Pin91=PD15
-Mcu.Pin92=PD14
-Mcu.Pin93=PA6
-Mcu.Pin94=PA7
-Mcu.Pin95=PF12
-Mcu.Pin96=PF15
-Mcu.Pin97=PE12
-Mcu.Pin98=PE15
-Mcu.Pin99=PJ5
-Mcu.PinsNb=124
+Mcu.Pin70=PJ11
+Mcu.Pin71=PF10
+Mcu.Pin72=PF9
+Mcu.Pin73=PJ10
+Mcu.Pin74=PC1
+Mcu.Pin75=PC2
+Mcu.Pin76=PC3
+Mcu.Pin77=PJ9
+Mcu.Pin78=PH2
+Mcu.Pin79=PA2
+Mcu.Pin8=PI1
+Mcu.Pin80=PA1
+Mcu.Pin81=PA0
+Mcu.Pin82=PJ0
+Mcu.Pin83=PE10
+Mcu.Pin84=PJ8
+Mcu.Pin85=PJ7
+Mcu.Pin86=PJ6
+Mcu.Pin87=PH5
+Mcu.Pin88=PI15
+Mcu.Pin89=PJ1
+Mcu.Pin9=PI7
+Mcu.Pin90=PF13
+Mcu.Pin91=PF14
+Mcu.Pin92=PE9
+Mcu.Pin93=PE11
+Mcu.Pin94=PB10
+Mcu.Pin95=PB11
+Mcu.Pin96=PH10
+Mcu.Pin97=PD15
+Mcu.Pin98=PD14
+Mcu.Pin99=PA6
+Mcu.PinsNb=131
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H750XBHx
@@ -215,7 +222,8 @@ PA7.Mode=RMII
 PA7.Signal=ETH_CRS_DV
 PA9.Mode=Slave_8_bits_External_Synchro
 PA9.Signal=DCMI_D0
-PB1.Signal=ADCx_INP5
+PB1.Locked=true
+PB1.Signal=GPIO_Output
 PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
 PB11.Mode=Asynchronous
@@ -244,6 +252,10 @@ PC11.Mode=SD_4_bits_Wide_bus
 PC11.Signal=SDMMC1_D3
 PC12.Mode=SD_4_bits_Wide_bus
 PC12.Signal=SDMMC1_CK
+PC14-OSC32_IN\ (OSC32_IN).Locked=true
+PC14-OSC32_IN\ (OSC32_IN).Signal=RCC_OSC32_IN
+PC15-OSC32_OUT\ (OSC32_OUT).Locked=true
+PC15-OSC32_OUT\ (OSC32_OUT).Signal=GPIO_Output
 PC2.GPIOParameters=GPIO_Speed_High_Default
 PC2.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
 PC2.Mode=SdramChipSelect1_1
@@ -433,12 +445,16 @@ PH12.Mode=Slave_8_bits_External_Synchro
 PH12.Signal=DCMI_D3
 PH14.Mode=Slave_8_bits_External_Synchro
 PH14.Signal=DCMI_D4
+PH2.Locked=true
+PH2.Signal=GPXTI2
 PH5.GPIOParameters=GPIO_Speed_High_Default
 PH5.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
 PH5.Locked=true
 PH5.Signal=FMC_SDNWE
 PH8.Mode=Slave_8_bits_External_Synchro
 PH8.Signal=DCMI_HSYNC
+PI1.Mode=Full_Duplex_Master
+PI1.Signal=SPI2_SCK
 PI12.GPIOParameters=GPIO_Speed
 PI12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PI12.Locked=true
@@ -459,6 +475,10 @@ PI15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PI15.Locked=true
 PI15.Mode=RGB888
 PI15.Signal=LTDC_R0
+PI2.Mode=Full_Duplex_Master
+PI2.Signal=SPI2_MISO
+PI3.Mode=Full_Duplex_Master
+PI3.Signal=SPI2_MOSI
 PI4.Mode=Slave_8_bits_External_Synchro
 PI4.Signal=DCMI_D5
 PI5.Mode=Slave_8_bits_External_Synchro
@@ -708,8 +728,6 @@ RCC.VCO3OutputFreq_Value=800000000
 RCC.VCOInput1Freq_Value=5000000
 RCC.VCOInput2Freq_Value=12500000
 RCC.VCOInput3Freq_Value=5000000
-SH.ADCx_INP5.0=ADC1_INP5,IN5-Single-Ended
-SH.ADCx_INP5.ConfNb=1
 SH.FMC_A0.0=FMC_A0,13b-sda1
 SH.FMC_A0.ConfNb=1
 SH.FMC_A1.0=FMC_A1,13b-sda1
@@ -784,6 +802,8 @@ SH.FMC_SDNRAS.0=FMC_SDNRAS,13b-sda1
 SH.FMC_SDNRAS.ConfNb=1
 SH.FMC_SDNWE.0=FMC_SDNWE,13b-sda1
 SH.FMC_SDNWE.ConfNb=1
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
 SH.S_TIM5_CH1.0=TIM5_CH1,PWM Generation1 CH1
 SH.S_TIM5_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
@@ -792,6 +812,12 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI2.CalculateBaudRate=100.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
 SPI4.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI4.CalculateBaudRate=50.0 MBits/s
 SPI4.Direction=SPI_DIRECTION_2LINES
@@ -804,6 +830,8 @@ USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
+VP_ADC3_TempSens_Input.Mode=IN-TempSens
+VP_ADC3_TempSens_Input.Signal=ADC3_TempSens_Input
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
