--- a/project/CubeMX_Config/CubeMX_Config.ioc
+++ b/project/CubeMX_Config/CubeMX_Config.ioc
@@ -1,6 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_TEMPSENSOR
-ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC3.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
 ADC3.NbrOfConversionFlag=1
 ADC3.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC3.OffsetSignedSaturation-0\#ChannelRegularConversion=DISABLE
@@ -17,158 +18,163 @@ KeepUserPlacement=false
 Mcu.Family=STM32H7
 Mcu.IP0=ADC3
 Mcu.IP1=CORTEX_M7
-Mcu.IP10=SDMMC2
-Mcu.IP11=SPI1
-Mcu.IP12=SPI2
-Mcu.IP13=SPI4
-Mcu.IP14=SYS
-Mcu.IP15=TIM5
-Mcu.IP16=UART4
-Mcu.IP17=USART3
-Mcu.IP18=USB_OTG_FS
+Mcu.IP10=SDMMC1
+Mcu.IP11=SDMMC2
+Mcu.IP12=SPI1
+Mcu.IP13=SPI2
+Mcu.IP14=SPI4
+Mcu.IP15=SYS
+Mcu.IP16=TIM3
+Mcu.IP17=TIM5
+Mcu.IP18=UART4
+Mcu.IP19=USART3
 Mcu.IP2=DCMI
-Mcu.IP3=ETH
-Mcu.IP4=FMC
-Mcu.IP5=LTDC
-Mcu.IP6=NVIC
-Mcu.IP7=QUADSPI
-Mcu.IP8=RCC
-Mcu.IP9=SDMMC1
-Mcu.IPNb=19
+Mcu.IP20=USB_OTG_FS
+Mcu.IP3=DEBUG
+Mcu.IP4=ETH
+Mcu.IP5=FMC
+Mcu.IP6=LTDC
+Mcu.IP7=NVIC
+Mcu.IP8=QUADSPI
+Mcu.IP9=RCC
+Mcu.IPNb=21
 Mcu.Name=STM32H750XBHx
 Mcu.Package=TFBGA240
 Mcu.Pin0=PI6
 Mcu.Pin1=PI5
 Mcu.Pin10=PE1
-Mcu.Pin100=PA7
-Mcu.Pin101=PF12
-Mcu.Pin102=PF15
-Mcu.Pin103=PE12
-Mcu.Pin104=PE15
-Mcu.Pin105=PJ5
-Mcu.Pin106=PH12
-Mcu.Pin107=PD11
-Mcu.Pin108=PD12
-Mcu.Pin109=PA5
+Mcu.Pin100=PD14
+Mcu.Pin101=PA6
+Mcu.Pin102=PA7
+Mcu.Pin103=PF12
+Mcu.Pin104=PF15
+Mcu.Pin105=PE12
+Mcu.Pin106=PE15
+Mcu.Pin107=PJ5
+Mcu.Pin108=PH12
+Mcu.Pin109=PD11
 Mcu.Pin11=PB6
-Mcu.Pin110=PC4
-Mcu.Pin111=PB1
-Mcu.Pin112=PJ2
-Mcu.Pin113=PF11
-Mcu.Pin114=PG0
-Mcu.Pin115=PE8
-Mcu.Pin116=PE13
-Mcu.Pin117=PH8
-Mcu.Pin118=PB15
-Mcu.Pin119=PD10
+Mcu.Pin110=PD12
+Mcu.Pin111=PA5
+Mcu.Pin112=PC4
+Mcu.Pin113=PB1
+Mcu.Pin114=PJ2
+Mcu.Pin115=PF11
+Mcu.Pin116=PG0
+Mcu.Pin117=PE8
+Mcu.Pin118=PE13
+Mcu.Pin119=PH8
 Mcu.Pin12=PB4 (NJTRST)
-Mcu.Pin120=PD9
-Mcu.Pin121=PC5
-Mcu.Pin122=PJ3
-Mcu.Pin123=PJ4
-Mcu.Pin124=PG1
-Mcu.Pin125=PE7
-Mcu.Pin126=PE14
-Mcu.Pin127=PB14
-Mcu.Pin128=PD8
-Mcu.Pin129=VP_ADC3_TempSens_Input
+Mcu.Pin120=PB15
+Mcu.Pin121=PD10
+Mcu.Pin122=PD9
+Mcu.Pin123=PC5
+Mcu.Pin124=PB0
+Mcu.Pin125=PJ3
+Mcu.Pin126=PJ4
+Mcu.Pin127=PG1
+Mcu.Pin128=PE7
+Mcu.Pin129=PE14
 Mcu.Pin13=PK4
-Mcu.Pin130=VP_SYS_VS_Systick
+Mcu.Pin130=PB14
+Mcu.Pin131=PD8
+Mcu.Pin132=VP_ADC3_TempSens_Input
+Mcu.Pin133=VP_SYS_VS_Systick
 Mcu.Pin14=PG11
 Mcu.Pin15=PJ15
 Mcu.Pin16=PD6
 Mcu.Pin17=PC11
-Mcu.Pin18=PI2
-Mcu.Pin19=PH14
+Mcu.Pin18=PA14 (JTCK/SWCLK)
+Mcu.Pin19=PI2
 Mcu.Pin2=PI4
-Mcu.Pin20=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin21=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin22=PE2
-Mcu.Pin23=PE0
-Mcu.Pin24=PB3 (JTDO/TRACESWO)
-Mcu.Pin25=PK6
-Mcu.Pin26=PK3
-Mcu.Pin27=PD7
-Mcu.Pin28=PC12
-Mcu.Pin29=PI3
+Mcu.Pin20=PH14
+Mcu.Pin21=PC15-OSC32_OUT (OSC32_OUT)
+Mcu.Pin22=PC14-OSC32_IN (OSC32_IN)
+Mcu.Pin23=PE2
+Mcu.Pin24=PE0
+Mcu.Pin25=PB3 (JTDO/TRACESWO)
+Mcu.Pin26=PK6
+Mcu.Pin27=PK3
+Mcu.Pin28=PD7
+Mcu.Pin29=PC12
 Mcu.Pin3=PB5
-Mcu.Pin30=PE5
-Mcu.Pin31=PG15
-Mcu.Pin32=PK7
-Mcu.Pin33=PG14
-Mcu.Pin34=PG13
-Mcu.Pin35=PJ14
-Mcu.Pin36=PJ12
-Mcu.Pin37=PD2
-Mcu.Pin38=PD0
-Mcu.Pin39=PA10
+Mcu.Pin30=PI3
+Mcu.Pin31=PA13 (JTMS/SWDIO)
+Mcu.Pin32=PE5
+Mcu.Pin33=PG15
+Mcu.Pin34=PK7
+Mcu.Pin35=PG14
+Mcu.Pin36=PG13
+Mcu.Pin37=PJ14
+Mcu.Pin38=PJ12
+Mcu.Pin39=PD2
 Mcu.Pin4=PK5
-Mcu.Pin40=PA9
-Mcu.Pin41=PI9
-Mcu.Pin42=PE6
-Mcu.Pin43=PJ13
-Mcu.Pin44=PD1
-Mcu.Pin45=PC8
-Mcu.Pin46=PC9
-Mcu.Pin47=PA12
-Mcu.Pin48=PA11
-Mcu.Pin49=PG8
+Mcu.Pin40=PD0
+Mcu.Pin41=PA10
+Mcu.Pin42=PA9
+Mcu.Pin43=PI9
+Mcu.Pin44=PE6
+Mcu.Pin45=PJ13
+Mcu.Pin46=PD1
+Mcu.Pin47=PC8
+Mcu.Pin48=PC9
+Mcu.Pin49=PA12
 Mcu.Pin5=PG10
-Mcu.Pin50=PF2
-Mcu.Pin51=PF1
-Mcu.Pin52=PF0
-Mcu.Pin53=PG5
-Mcu.Pin54=PI12
-Mcu.Pin55=PI13
-Mcu.Pin56=PI14
-Mcu.Pin57=PF3
-Mcu.Pin58=PG4
-Mcu.Pin59=PG2
+Mcu.Pin50=PA11
+Mcu.Pin51=PG8
+Mcu.Pin52=PF2
+Mcu.Pin53=PF1
+Mcu.Pin54=PF0
+Mcu.Pin55=PG5
+Mcu.Pin56=PI12
+Mcu.Pin57=PI13
+Mcu.Pin58=PI14
+Mcu.Pin59=PF3
 Mcu.Pin6=PG9
-Mcu.Pin60=PK2
-Mcu.Pin61=PH1-OSC_OUT (PH1)
-Mcu.Pin62=PH0-OSC_IN (PH0)
-Mcu.Pin63=PF5
-Mcu.Pin64=PF4
-Mcu.Pin65=PK0
-Mcu.Pin66=PK1
-Mcu.Pin67=PF6
-Mcu.Pin68=PF7
-Mcu.Pin69=PF8
+Mcu.Pin60=PG4
+Mcu.Pin61=PG2
+Mcu.Pin62=PK2
+Mcu.Pin63=PH1-OSC_OUT (PH1)
+Mcu.Pin64=PH0-OSC_IN (PH0)
+Mcu.Pin65=PF5
+Mcu.Pin66=PF4
+Mcu.Pin67=PK0
+Mcu.Pin68=PK1
+Mcu.Pin69=PF6
 Mcu.Pin7=PC10
-Mcu.Pin70=PJ11
-Mcu.Pin71=PF10
-Mcu.Pin72=PF9
-Mcu.Pin73=PJ10
-Mcu.Pin74=PC1
-Mcu.Pin75=PC2
-Mcu.Pin76=PC3
-Mcu.Pin77=PJ9
-Mcu.Pin78=PH2
-Mcu.Pin79=PA2
+Mcu.Pin70=PF7
+Mcu.Pin71=PF8
+Mcu.Pin72=PJ11
+Mcu.Pin73=PF10
+Mcu.Pin74=PF9
+Mcu.Pin75=PJ10
+Mcu.Pin76=PC1
+Mcu.Pin77=PC2
+Mcu.Pin78=PC3
+Mcu.Pin79=PJ9
 Mcu.Pin8=PI1
-Mcu.Pin80=PA1
-Mcu.Pin81=PA0
-Mcu.Pin82=PJ0
-Mcu.Pin83=PE10
-Mcu.Pin84=PJ8
-Mcu.Pin85=PJ7
-Mcu.Pin86=PJ6
-Mcu.Pin87=PH5
-Mcu.Pin88=PI15
-Mcu.Pin89=PJ1
+Mcu.Pin80=PH2
+Mcu.Pin81=PA2
+Mcu.Pin82=PA1
+Mcu.Pin83=PA0
+Mcu.Pin84=PJ0
+Mcu.Pin85=PE10
+Mcu.Pin86=PJ8
+Mcu.Pin87=PJ7
+Mcu.Pin88=PJ6
+Mcu.Pin89=PH5
 Mcu.Pin9=PI7
-Mcu.Pin90=PF13
-Mcu.Pin91=PF14
-Mcu.Pin92=PE9
-Mcu.Pin93=PE11
-Mcu.Pin94=PB10
-Mcu.Pin95=PB11
-Mcu.Pin96=PH10
-Mcu.Pin97=PD15
-Mcu.Pin98=PD14
-Mcu.Pin99=PA6
-Mcu.PinsNb=131
+Mcu.Pin90=PI15
+Mcu.Pin91=PJ1
+Mcu.Pin92=PF13
+Mcu.Pin93=PF14
+Mcu.Pin94=PE9
+Mcu.Pin95=PE11
+Mcu.Pin96=PB10
+Mcu.Pin97=PB11
+Mcu.Pin98=PH10
+Mcu.Pin99=PD15
+Mcu.PinsNb=134
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H750XBHx
@@ -188,6 +194,7 @@ NVIC.SDMMC1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SDMMC2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM3_IRQn=true\:3\:0\:true\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0.Locked=true
 PA0.Mode=Asynchronous
@@ -206,6 +213,10 @@ PA12.GPIOParameters=GPIO_Speed
 PA12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
+PA13\ (JTMS/SWDIO).Mode=Serial_Wire
+PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
+PA14\ (JTCK/SWCLK).Mode=Serial_Wire
+PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_Speed
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA2.Mode=RMII
@@ -222,6 +233,7 @@ PA7.Mode=RMII
 PA7.Signal=ETH_CRS_DV
 PA9.Mode=Slave_8_bits_External_Synchro
 PA9.Signal=DCMI_D0
+PB0.Signal=S_TIM3_CH3
 PB1.Locked=true
 PB1.Signal=GPIO_Output
 PB10.Mode=Asynchronous
@@ -440,6 +452,9 @@ PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
 PH1-OSC_OUT\ (PH1).Signal=RCC_OSC_OUT
+PH10.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PH10.GPIO_PuPd=GPIO_PULLUP
+PH10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PH10.Signal=S_TIM5_CH1
 PH12.Mode=Slave_8_bits_External_Synchro
 PH12.Signal=DCMI_D3
@@ -632,7 +647,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.27
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_LTDC_Init-LTDC-false-HAL-true,6-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,7-MX_SDMMC2_SD_Init-SDMMC2-false-HAL-true,8-MX_SPI4_Init-SPI4-false-HAL-true,9-MX_UART4_Init-UART4-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,13-MX_ADC1_Init-ADC1-false-HAL-true,14-MX_TIM5_Init-TIM5-false-HAL-true,15-MX_DCMI_Init-DCMI-false-HAL-true,16-MX_QUADSPI_Init-QUADSPI-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_LTDC_Init-LTDC-false-HAL-true,6-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,7-MX_SDMMC2_SD_Init-SDMMC2-false-HAL-true,8-MX_SPI4_Init-SPI4-false-HAL-true,9-MX_UART4_Init-UART4-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,13-MX_DCMI_Init-DCMI-false-HAL-true,14-MX_QUADSPI_Init-QUADSPI-false-HAL-true,15-MX_ADC3_Init-ADC3-false-HAL-true,16-MX_SPI2_Init-SPI2-false-HAL-true,17-MX_TIM3_Init-TIM3-false-HAL-true,18-MX_TIM5_Init-TIM5-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_5_CYCLE
 QUADSPI.ClockPrescaler=1
 QUADSPI.FifoThreshold=4
@@ -717,7 +732,7 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.Spi45ClockSelection=RCC_SPI45CLKSOURCE_PLL3
 RCC.Tim1OutputFreq_Value=240000000
 RCC.Tim2OutputFreq_Value=240000000
-RCC.TraceFreq_Value=64000000
+RCC.TraceFreq_Value=480000000
 RCC.USART16Freq_Value=120000000
 RCC.USART234578Freq_Value=120000000
 RCC.USBCLockSelection=RCC_USBCLKSOURCE_HSI48
@@ -804,6 +819,8 @@ SH.FMC_SDNWE.0=FMC_SDNWE,13b-sda1
 SH.FMC_SDNWE.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,Input_Capture3_from_TI3
+SH.S_TIM3_CH3.ConfNb=1
 SH.S_TIM5_CH1.0=TIM5_CH1,PWM Generation1 CH1
 SH.S_TIM5_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
@@ -824,8 +841,18 @@ SPI4.Direction=SPI_DIRECTION_2LINES
 SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI4.Mode=SPI_MODE_MASTER
 SPI4.VirtualType=VM_MASTER
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
+TIM3.ICFilter_CH3=3
+TIM3.IPParameters=Channel-Input_Capture3_from_TI3,Prescaler,AutoReloadPreload,ICFilter_CH3
+TIM3.Prescaler=239
+TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM5.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM5.IPParameters=Channel-PWM Generation1 CH1
+TIM5.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,AutoReloadPreload,Pulse-PWM Generation1 CH1,OCPolarity_1
+TIM5.OCPolarity_1=TIM_OCPOLARITY_LOW
+TIM5.Period=26
+TIM5.Prescaler=239
+TIM5.Pulse-PWM\ Generation1\ CH1=13
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
